# LibraryManger

./: CMakeLists.txt
Src/: Admin.cpp  Admin.hpp  Book.cpp  Book.hpp  LibraryManager.cpp  LibraryManager.hpp  Person.cpp  Person.hpp  Subscriber.cpp  Subscriber.hpp  book.json  main.cpp
